<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="site.muerte.example.feature_profile.presentation.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature_profile.presentation.profile.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/header_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_info_title"
                android:textColor="@color/colorTextView"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/surname"
                    android:textColor="@color/colorTextView"
                    android:textSize="@dimen/text_view_size"
                    app:layout_constraintEnd_toEndOf="@+id/etSurname"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/etSurname"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/etSurname"
                    style="@style/EditTextStyle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_surname"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@={model.surname}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSurname" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/name"
                    android:textColor="@color/colorTextView"
                    android:textSize="@dimen/text_view_size"
                    app:layout_constraintEnd_toEndOf="@+id/etName"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/etName"
                    app:layout_constraintTop_toBottomOf="@+id/etSurname" />

                <EditText
                    android:id="@+id/etName"
                    style="@style/EditTextStyle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@={model.name}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <TextView
                    android:id="@+id/tvMiddleName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/middle_name"
                    android:textColor="@color/colorTextView"
                    android:textSize="@dimen/text_view_size"
                    app:layout_constraintEnd_toEndOf="@+id/etMiddleName"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/etMiddleName"
                    app:layout_constraintTop_toBottomOf="@+id/etName" />

                <EditText
                    android:id="@+id/etMiddleName"
                    style="@style/EditTextStyle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_middle_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@={model.middleName}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMiddleName" />

                <TextView
                    android:id="@+id/tvCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/city"
                    android:textColor="@color/colorTextView"
                    android:textSize="@dimen/text_view_size"
                    app:layout_constraintEnd_toEndOf="@+id/etMiddleName"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/etMiddleName"
                    app:layout_constraintTop_toBottomOf="@+id/etMiddleName" />

                <AutoCompleteTextView
                    android:id="@+id/etCity"
                    style="@style/EditTextStyle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:completionHint="@string/choose_city"
                    android:completionThreshold="0"
                    android:drawableEnd="@drawable/ic_arrow_down"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/choose_city"
                    android:inputType="text"
                    android:popupBackground="@color/colorBackground"
                    android:text="@={model.city}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCity" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/phone"
                    android:textColor="@color/colorTextView"
                    android:textSize="@dimen/text_view_size"
                    app:layout_constraintEnd_toEndOf="@+id/etMiddleName"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/etMiddleName"
                    app:layout_constraintTop_toBottomOf="@+id/etCity" />

                <EditText
                    android:id="@+id/etPhone"
                    style="@style/EditTextStyle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/phone_hint"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/email"
                    android:textColor="@color/colorTextView"
                    android:textSize="@dimen/text_view_size"
                    app:layout_constraintEnd_toEndOf="@+id/etEmail"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/etEmail"
                    app:layout_constraintTop_toBottomOf="@+id/etPhone" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/EditTextStyle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:text="@={model.email}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

                <TextView
                    android:id="@+id/tvEmailInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/info"
                    android:textColor="@color/colorTextView"
                    android:textSize="@dimen/text_view_size"
                    app:layout_constraintBottom_toTopOf="@+id/etEmail"
                    app:layout_constraintEnd_toEndOf="@+id/etEmail" />

                <Button
                    android:id="@+id/btn_next"
                    style="@style/ButtonTextStyle"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/next"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etEmail" />

                <TextView
                    android:id="@+id/btn_support"
                    style="@style/SupportTextStyle"
                    android:layout_marginTop="90dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_next" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/progress_side"
            android:layout_height="@dimen/progress_side"
            android:visibility="gone"
            android:background="@color/cardview_dark_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>